# jobs-cn

./: .env.example  .gitignore  README.md  build_site_data.py  make_csv.py  occupations.csv  occupations.json  parse_detail.py  parse_occupations.py  process.py  pyproject.toml  score.py  scores.json  scrape.py  update_salaries.py
site/: data.json  index.html
